# WiFi-Kids

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  SECURITY.md  question-components-demo.html  test_frontend_integration.py  test_main_endpoints.py
backend/: .coverage  .env  .env.production  DEPLOYMENT_HOSTINGER.md  alembic.ini  app.py  coverage.xml  debug_challenge.py  debug_challenge2.py  deploy.bat  deploy.sh  deploy_to_server_simple.bat  deploy_to_server_simple.sh  dev.db  env.example  manual_server_setup.sh  passenger_wsgi.py  pyproject.toml  requirements.txt  run_tests.py  server_deploy.sh  test_cors.py  test_openai_direct.py
backend/api/: API_README.md  main.py
backend/api/core/: db.py  settings.py
backend/api/db/: analytics.py  models.py
backend/api/integrations/: agent.py  ai_validator.py  langchain_agent.py  router.py  validation.py
backend/api/repositories/: analytics.py  challenges.py  routers.py
backend/api/routes/: access.py  analytics.py  challenge.py  session.py
backend/api/schemas/: access.py  challenge.py  commands.py  session.py
backend/hostinger_deploy/: .htaccess  DEPLOYMENT_INFO.txt
backend/hostinger_deploy/api/: main.py
backend/hostinger_deploy/api/core/: settings.py  timewin.py
backend/hostinger_deploy/api/integrations/: agent.py  ai_validator.py  types.py  validation.py
backend/hostinger_deploy/api/repositories/: commands.py  devices.py  sessions.py
backend/hostinger_deploy/api/routes/: access.py  challenge.py  commands.py
backend/hostinger_deploy/api/schemas/: access.py  analytics.py
backend/tests/: __init__.py  conftest.py
backend/tests/analytics/: test_analytics.py
backend/tests/e2e/: test_complete_workflow.py
backend/tests/integration/: test_challenge_routes.py
backend/tests/unit/: test_agent.py  test_models.py  test_validation.py
backend/utils/: constants.py  logger.py
docker/: docker-compose.yml
(+143 files in other folders)
